--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,6 @@
 body {
-    border: 1px solid #000;
     width: 1440px;
     height: 3300px;
-    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
     background-color: #fff;
     font-family: "Roboto", "Raleway" , sans-serif;
     color: #000;
@@ -10,22 +8,172 @@ body {
 }
 
  a {
-     text-decoration: none;
+    text-decoration: none;
  }
+
+ .header-container {
+    width: 1440px;
+    height: 72px;
+    background: #fff;
+    
+}
+
+
+.logo-web {
+   font-family: Raleway;
+   font-size: 18px;
+   font-weight: 700;
+   line-height: 21px;
+   letter-spacing: 0.03em;
+   text-align: left;
+   color: #4D5AE5;
+   width: 44px;
+   height: 21px;
+   gap: 0px;
+   opacity: 0px;
+   
+}
+
+.logo-studio {
+    width: 71px;
+    height: 21px;
+    gap: 0px;
+    opacity: 0px;
+    font-family: Raleway;
+    font-size: 18px;
+    font-weight: 700;
+    line-height: 21px;
+    letter-spacing: 0.03em;
+    text-align: left;
+    color: #2E2F42;
+}
+
+.studio-header {
+    width: 88px;
+    height: 60px;
+    font-weight: 500;.
+    font-size: 16px;
+    line-height: 150%;
+    color: #2e2f42;
+    
+}
+
+
+.studio-header:hover {
+    width: 67px;
+    height: 4px;
+    top: 44px;
+    gap: 0px;
+    border-radius: 2px 0px 0px 0px;
+    opacity: 0px;
+    color: #404BBF;
+}
+
+
+.portfolio-header {
+    width: 66px;
+    height: 24px;
+    gap: 0px;
+    opacity: 0px;
+        font-size: 16px;
+        font-weight: 500;
+        line-height: 24px;
+        letter-spacing: 0.02em;
+        text-align: left;
+         font-weight: 500;
+            font-size: 16px;
+            line-height: 150%;
+            color: #2e2f42;
+}
+
+.portfolio-header:hover {
+    width: 67px;
+    height: 4px;
+    top: 44px;
+    gap: 0px;
+    border-radius: 2px 0px 0px 0px;
+    opacity: 0px;
+    color: #404BBF;
+}
+
+
+.contacts-header {
+    width: 67px;
+        height: 24px;
+        gap: 0px;
+        opacity: 0px;
+        font-family: Roboto;
+            font-size: 16px;
+            font-weight: 500;
+            line-height: 24px;
+            letter-spacing: 0.02em;
+            text-align: left;
+            color: #2E2F42;
+}
+
+.contacts-header:hover {
+    width: 67px;
+    height: 4px;
+    top: 44px;
+    gap: 0px;
+    border-radius: 2px 0px 0px 0px;
+    opacity: 0px;
+    color: #404BBF;
+}
+
+.mail-info {
+    color: #434455;
+
+}
+
+.tel-info {
+    color: #434455;
+}
+
+.button-container {
+    width: 1440px;
+        height: 600px;
+        top: 72px;
+        gap: 0px;
+        opacity: 0px;
+        background: #2E2F42;
+}
+
+.title {
+    width: 496px;
+        height: 120px;
+        top: 260px;
+        left: 472px;
+        gap: 0px;
+        opacity: 0px;
+        color: #FFFFFF;
+    font-family: Roboto;
+            font-size: 56px;
+            font-weight: 700;
+            line-height: 60px;
+            letter-spacing: 0.02em;
+            text-align: center;
+}
+
+.order-but {
+    border-radius: 4px;
+        padding: 16px 32px;
+        width: 169px;
+        height: 56px;
+        box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+        background: #4d5ae5;
+}
+
+.but-text {
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 150%;
+    letter-spacing: 0.04em;
+    color: #fff;
+}
     
 
 
 
 
-    --iris: #4d5ae5;
-    --ocean: #404bbf;
-    --navy-blue: #2e2f42;
-    --green: #31d0aa;
-    --slate: #434455;
-    --light-slate: #8e8f99;
-    --cornflower: #e7e9fc;
-    --cloud: #f4f4fd;
-    --navy-blue-modal: rgba(46, 47, 66, 0.4);
-    --grey: rgba(46, 47, 66, 0.7);
-    --white: #fff;
-    --dairy: #fcfcfc;
+  
