--- a/css/styles.css
+++ b/css/styles.css
@@ -24,9 +24,9 @@ p {
    margin: 0;
 }
 
-/* img {
+.img {
    display: block;
-} */
+}
 
 .container {
     max-width: 1158px;
@@ -36,6 +36,11 @@ p {
     justify-content: space-between;
     align-items: center;
 
+}
+
+.nav {
+    display: flex;
+    align-items: center;
 }
 
 
@@ -49,7 +54,10 @@ p {
 .menu {
     display: flex;
     gap: 40px;
+}
 
+.menu-item {
+    padding: 24px 0;
 }
 
 .logo-web {
@@ -60,6 +68,7 @@ p {
    text-transform: uppercase;
    line-height: 1.17;
    letter-spacing: 0.03em;
+   margin-right: 76px;
 }
 
 .logo-studio {
@@ -113,8 +122,12 @@ p {
 }
 
 /* Title and Button Section1 */
- {
+.bg {
     background: #2E2F42;
+}
+
+.section {
+    padding: 188px 0;
 }
 
 .title {
@@ -124,6 +137,7 @@ p {
     line-height: 1.07;
     letter-spacing: 0.02em;
     text-align: center;
+    max-width: 496px;
 }
 
 .btn {
@@ -135,6 +149,10 @@ p {
     cursor: pointer;
     line-height: 1.5;
     letter-spacing: 0.04em;
+    max-width: 496px;
+    height: 56px;
+    border: none;
+    border-radius: 4px;
 }
 
 .btn:hover {
@@ -151,6 +169,17 @@ p {
    font-weight: 500;
    line-height: 1.2;
    letter-spacing: 0.02em;
+   visibility: hidden;
+}
+
+
+.description-list {
+    display: flex;
+    gap: 24px;
+}
+
+.description-text {
+    width: calc((100% - 72px) / 4);
 }
 
 .description-list-title {
@@ -159,6 +188,7 @@ p {
     font-weight: 500;
     line-height: 1.2;
     letter-spacing: 0.02em;
+    margin-bottom: 8px;
 }
 
 
@@ -172,7 +202,7 @@ p {
 }
 
 /* Team Photo Section3 */
- {
+.bgs {
    background-color: #F4F4FD;
 }
 
@@ -183,10 +213,23 @@ p {
     letter-spacing: 0.02em;
     text-transform: capitalize;
     color: #2e2f42;
+    margin-bottom: 72px;
+}
+
+.name-container {
+    padding: 32px 0;
+
+}
+
+.team-list {
+    display: flex;
+    gap: 24px;
 }
 
 .team-photo-list {
     background-color: #FFFFFF;
+    width: calc((100% - 72px) / 4);
+    border-radius: 0px 0px 4px 4px;
 }
 
 .name {
@@ -195,6 +238,8 @@ p {
     line-height: 1.2;
     letter-spacing: 0.02em;
     color: #2e2f42;
+    text-align: center;
+    margin-bottom: 8px;
 }
 
 .proffesion {
@@ -202,6 +247,7 @@ p {
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #434455;
+    text-align: center;
 }
 
 /* Section4 Portfolio */
@@ -212,6 +258,14 @@ p {
     letter-spacing: 0.02em;
     text-transform: capitalize;
     color: #2e2f42;
+    margin-bottom: 72px;
+}
+
+.portfolio-list {
+    display: flex;
+    flex-wrap: wrap; 
+    column-gap: 24px;
+    row-gap: 48px;
 }
 
 .portfolio-text {
@@ -220,6 +274,7 @@ p {
     line-height: 1.2;
     letter-spacing: 0.02em;
     color: #2e2f42;
+    margin-bottom: 8px;
 }
 
 .portfolio-p {
@@ -230,13 +285,20 @@ p {
 }
 
 .portfolio-item {
-    border-bottom: ;
+    width: calc((100% - 48px) / 3);
+}
+
+.portfolio-container {
+    padding: 32px 16px;
+    border: 1px solid #e7e9fc;
+    border-top: none;
 }
 
 
 /* Footer Info */
 .footer {
     background: #2E2F42;
+    padding: 100px 0;
 }
 
 .logo-web {
@@ -247,6 +309,8 @@ p {
     text-transform: uppercase;
     letter-spacing: 0.03em;
     line-height: 1.17;
+    display: inline-block;
+    margin-bottom: 16px;
 }
 
 .logo-studio-f {
