--- a/css/styles.css
+++ b/css/styles.css
@@ -149,10 +149,11 @@ p {
     cursor: pointer;
     line-height: 1.5;
     letter-spacing: 0.04em;
-    max-width: 496px;
+    min-width: 169px
     height: 56px;
     border: none;
     border-radius: 4px;
+    display: block;
 }
 
 .btn:hover {
