--- a/css/styles.css
+++ b/css/styles.css
@@ -127,7 +127,7 @@ img {
     background: #2E2F42;
 }
 
-.section {
+.section1 {
     padding: 188px 0;
 }
 
@@ -284,6 +284,7 @@ img {
     flex-wrap: wrap; 
     column-gap: 24px;
     row-gap: 48px;
+    width: calc((100% - 48px) / 3);
 }
 
 .portfolio-text {
@@ -302,9 +303,6 @@ img {
     color: #434455;
 }
 
-.portfolio-item {
-    width: calc((100% - 48px) / 3);
-}
 
 .portfolio-container {
     padding: 32px 16px;
@@ -317,6 +315,7 @@ img {
 .footer {
     background: #2E2F42;
     padding: 100px 0;
+    display: inline-block;
 }
 
 .logo-web {
