--- a/css/styles.css
+++ b/css/styles.css
@@ -176,7 +176,10 @@ img {
    font-weight: 500;
    line-height: 1.2;
    letter-spacing: 0.02em;
-   visibility: hidden;
+}
+
+.container-hidden {
+    visibility: hidden; 
 }
 
 
