--- a/css/styles.css
+++ b/css/styles.css
@@ -85,6 +85,7 @@ img {
     color: #2E2F42;
     line-height: 1.5;
     letter-spacing: 0.02em;
+    padding: 24px 0;
 }
 
 .menu-link:hover,
@@ -123,12 +124,9 @@ img {
 }
 
 /* Title and Button Section1 */
-.bg {
-    background: #2E2F42;
-}
-
 .section1 {
     padding: 188px 0;
+    background: #2E2F42;
 }
 
 .title {
@@ -284,7 +282,10 @@ img {
     flex-wrap: wrap; 
     column-gap: 24px;
     row-gap: 48px;
-    width: calc((100% - 48px) / 3);
+}
+
+.portfolio-item {
+    width: calc((100% - 48px) / 3); 
 }
 
 .portfolio-text {
@@ -308,6 +309,7 @@ img {
     padding: 32px 16px;
     border: 1px solid #e7e9fc;
     border-top: none;
+    width: calc((100% - 48px) / 3);
 }
 
 
@@ -315,7 +317,6 @@ img {
 .footer {
     background: #2E2F42;
     padding: 100px 0;
-    display: inline-block;
 }
 
 .logo-web {
@@ -326,8 +327,8 @@ img {
     text-transform: uppercase;
     letter-spacing: 0.03em;
     line-height: 1.17;
-    display: inline-block;
     margin-bottom: 16px;
+    display: inline-block;
 }
 
 .logo-studio-f {
@@ -336,7 +337,6 @@ img {
     font-weight: 700;
     color: #f4f4fd;
     text-transform: uppercase;
-    display: inline-block;
 }
 
 .footer-text {
