--- a/css/styles.css
+++ b/css/styles.css
@@ -46,7 +46,6 @@ img {
 
 .header {
     border-bottom: 1px solid #e7e9fc;
-    padding: 24px 0;
     background-color: #fff;
 }
 
@@ -123,7 +122,7 @@ img {
 }
 
 /* Title and Button Section1 */
-.section1 {
+.section {
     padding: 188px 0;
     background: #2E2F42;
 }
@@ -284,7 +283,7 @@ img {
 }
 
 .portfolio-item {
-    width: calc((100% - 48px) / 3); 
+    width: calc((100% - 72px) / 3); 
 }
 
 .portfolio-text {
@@ -315,7 +314,6 @@ img {
 .footer {
     background: #2E2F42;
     padding: 100px 0;
-    display: inline-block;
 }
 
 .logo-web {
@@ -327,6 +325,7 @@ img {
     letter-spacing: 0.03em;
     line-height: 1.17;
     margin-bottom: 16px;
+    display: inline-block;
 }
 
 .logo-studio-f {
