--- a/css/styles.css
+++ b/css/styles.css
@@ -47,16 +47,13 @@ img {
 .header {
     border-bottom: 1px solid #e7e9fc;
     background-color: #fff;
+    padding: 24px 0;
 }
 
 
 .menu {
     display: flex;
     gap: 40px;
-}
-
-.menu-item {
-    padding: 24px 0;
 }
 
 .logo-web {
@@ -84,6 +81,7 @@ img {
     color: #2E2F42;
     line-height: 1.5;
     letter-spacing: 0.02em;
+    padding: 24px 0;
 }
 
 .menu-link:hover,
@@ -122,7 +120,7 @@ img {
 }
 
 /* Title and Button Section1 */
-.section {
+.section1 {
     padding: 188px 0;
     background: #2E2F42;
 }
@@ -161,19 +159,28 @@ img {
 }
 
 /*  Description Section2 */
-.section {
+.section2 {
     padding: 120px 0;
 }
 
-
-.title-description {
-   color: #2E2F42;
+.visually-hidden {
+    color: #2E2F42;
    font-size: 20px;
    font-weight: 500;
    line-height: 1.2;
    letter-spacing: 0.02em;
-   visibility: hidden;
-}
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    border: 0;
+    padding: 0;
+    
+    white-space: nowrap;
+    clip-path: inset(100%);
+    clip: rect(0 0 0 0);
+    overflow: hidden;
+  }
 
 
 .description-list {
@@ -205,14 +212,11 @@ img {
 }
 
 /* Team Photo Section3 */
-.section {
+.section3 {
     padding: 120px 0;
+    background-color: #F4F4FD;
 }
 
-
-.bgs {
-   background-color: #F4F4FD;
-}
 
 .team-photo-title {
     font-size: 36px;
@@ -259,7 +263,7 @@ img {
 }
 
 /* Section4 Portfolio */
-.section {
+.section4 {
     padding-top: 120px; 
     padding-bottom: 120px;
 }
@@ -283,7 +287,7 @@ img {
 }
 
 .portfolio-item {
-    width: calc((100% - 72px) / 3); 
+    width: calc((100% - 72px) / 6); 
 }
 
 .portfolio-text {
@@ -325,7 +329,6 @@ img {
     letter-spacing: 0.03em;
     line-height: 1.17;
     margin-bottom: 16px;
-    display: inline-block;
 }
 
 .logo-studio-f {
@@ -334,6 +337,7 @@ img {
     font-weight: 700;
     color: #f4f4fd;
     text-transform: uppercase;
+    display: inline-block;
 }
 
 .footer-text {
