--- a/css/styles.css
+++ b/css/styles.css
@@ -287,8 +287,9 @@ img {
 }
 
 .portfolio-item {
-    width: calc((100% - 72px) / 6); 
+    width: calc((100% - 72px) / 3);
 }
+
 
 .portfolio-text {
     font-weight: 500;
@@ -329,6 +330,7 @@ img {
     letter-spacing: 0.03em;
     line-height: 1.17;
     margin-bottom: 16px;
+    display: inline-block;
 }
 
 .logo-studio-f {
