--- a/css/styles.css
+++ b/css/styles.css
@@ -13,7 +13,7 @@ a {
 
 ul {
     margin: 0;
-    padding-left: 0;
+    padding: 0;
 }
 
 h1,
@@ -32,7 +32,6 @@ img {
     max-width: 1158px;
     padding: 0 15px; 
     margin: 0 auto;
-    display: flex;
     justify-content: space-between;
     align-items: center;
 
