--- a/css/styles.css
+++ b/css/styles.css
@@ -34,13 +34,16 @@ img {
     padding: 24px 0;
 }
 
+.header-container {
+    display: flex;
+}
+
 .container {
     max-width: 1158px;
     padding: 0 15px; 
     margin: 0 auto;
     justify-content: space-between;
     align-items: center;
-    display: flex;
 }
 
 .nav {
@@ -287,7 +290,7 @@ img {
 
 
 .portfolio-item {
-    width: calc((100% - 72px) / 3);
+   width: calc((100% - 72px) / 3); 
 }
 
 .portfolio-container {
