--- a/css/styles.css
+++ b/css/styles.css
@@ -283,7 +283,7 @@ img {
 .portfolio-list {
     display: flex;
     flex-wrap: wrap;
-    column-gap: 24px;
+    gap: 24px;
     row-gap: 48px;
 }    
    
@@ -292,6 +292,19 @@ img {
 .portfolio-item {
    width: calc((100% - 72px) / 3); 
 }
+
+.portfolio-item-one {
+    margin-right: 0;
+}
+
+.portfolio-item-two {
+    margin-right: 0;
+}
+
+.portfolio-item-three {
+    margin-right: 0;
+}
+
 
 .portfolio-container {
     padding: 32px 16px;
