--- a/css/styles.css
+++ b/css/styles.css
@@ -137,7 +137,6 @@ img {
     text-align: center;
     max-width: 496px;
     margin: 0 auto;
-    padding-bottom: 48px;
 }
 
 .btn {
@@ -154,7 +153,7 @@ img {
     border: none;
     border-radius: 4px;
     display: block;
-    margin: 0 auto;
+    margin: 48px auto;
 }
 
 .btn:hover {
@@ -355,7 +354,6 @@ img {
     letter-spacing: 0.02em;
     max-width: 264px;
     margin: 0;
-    padding-top: 16px;
 }
 
 
