--- a/css/styles.css
+++ b/css/styles.css
@@ -84,11 +84,27 @@ img {
     line-height: 1.5;
     letter-spacing: 0.02em;
     padding: 24px 0;
+    position: relative;
+    display: inline-block;
+    transition: color 250ms;
 }
 
 .menu-link:hover,
 .menu-link:focus {
     color: #404BBF;
+}
+
+.menu-link::after {
+    width: 0;
+    height: 4px;
+    background-color: #404bbf;
+    content: "";
+    display: block;
+    position: absolute;
+}
+
+.menu-link:hover::after {
+    width: 100%;
 }
 
 .adress {
@@ -108,6 +124,7 @@ img {
     line-height: 1.5;
     letter-spacing: 0.02em;
     padding: 24px 0;
+    transition: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .contacts-info:hover {
@@ -125,7 +142,15 @@ img {
 /* Title and Button Section1 */
 .tit-a-but {
     padding: 188px 0;
-    background: #2E2F42;
+    background-color: #2E2F42;
+    background-image: linear-gradient(
+        to bottom,
+        rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)
+        ),
+    url(../images/office.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
 }
 
 .title {
@@ -154,6 +179,7 @@ img {
     border-radius: 4px;
     display: block;
     margin: 48px auto;
+    transition: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .btn:hover {
@@ -185,6 +211,12 @@ img {
     clip-path: inset(100%);
     clip: rect(0 0 0 0);
     overflow: hidden;
+  }
+
+  .social {
+    fill: #4D5AE5;
+    
+
   }
 
 
@@ -249,6 +281,12 @@ img {
     background-color: #FFFFFF;
     width: calc((100% - 72px) / 4);
     border-radius: 0px 0px 4px 4px;
+    transition: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.team-photo-list:hover {
+    box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
+    background-color: #fff;
 }
 
 .name {
@@ -296,7 +334,13 @@ img {
    
 .portfolio-item {
     width: calc((100% - 48px) / 3);
+    transition: cubic-bezier(0.4, 0, 0.2, 1);
 }
+
+.portfolio-item:hover {
+    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
+}
+
 
 .portfolio-container {
     padding: 32px 16px;
