--- a/css/styles.css
+++ b/css/styles.css
@@ -213,13 +213,7 @@ img {
     overflow: hidden;
   }
 
-  .social {
-    fill: #4D5AE5;
-    
 
-  }
-
-  
 .description-list {
     display: flex;
     gap: 24px;
@@ -255,7 +249,6 @@ img {
     background-color: #F4F4FD;
 }
 
-
 .team-photo-title {
     font-size: 36px;
     line-height: 1.11;
@@ -266,16 +259,34 @@ img {
     margin-bottom: 72px;
 }
 
-.name-container {
-    padding: 32px 0;
-
-}
-
 .team-list {
     display: flex;
     gap: 24px;
     list-style-type: none;
 }
+
+
+
+
+.name-container {
+    padding: 32px 0;
+}
+
+.icons {
+    width: 232px;
+    height: 40px;
+    gap: 24px;
+    text-align: center;
+    margin: 8px 16px 32px 16px;
+}
+
+.social {
+    fill: #4d5ae5;
+   
+}
+
+
+
 
 .team-photo-list {
     background-color: #FFFFFF;
