--- a/css/styles.css
+++ b/css/styles.css
@@ -36,6 +36,7 @@ img {
 
 .header-container {
     display: flex;
+    box-shadow: 0 1px 6px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 2px 1px 0 rgba(46, 47, 66, 0.08);
 }
 
 .container {
@@ -86,7 +87,7 @@ img {
     padding: 24px 0;
     position: relative;
     display: inline-block;
-    transition: color 250ms;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .menu-link:hover,
@@ -101,6 +102,8 @@ img {
     content: "";
     display: block;
     position: absolute;
+    border-radius: 2px;
+    bottom: -1px;
 }
 
 .menu-link:hover::after {
@@ -151,6 +154,8 @@ img {
     url(../images/office.jpg);
     background-size: cover;
     background-repeat: no-repeat;
+    max-width: 1440px;
+    background-position: center;
 }
 
 .title {
@@ -179,7 +184,7 @@ img {
     border-radius: 4px;
     display: block;
     margin: 48px auto;
-    transition: cubic-bezier(0.4, 0, 0.2, 1);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .btn:hover {
@@ -222,6 +227,18 @@ img {
 
 .description-text {
     width: calc((100% - 72px) / 4);
+}
+
+.description-icons {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 112px;
+    background-color: #f4f4fd;
+    border-radius: 4px;
+    border: 1px solid #8e8f99;
+    margin-bottom: 8px;
+    
 }
 
 .description-list-title {
