--- a/css/styles.css
+++ b/css/styles.css
@@ -14,6 +14,7 @@ a {
 ul {
     margin: 0;
     padding: 0;
+    list-style-type: none;
 }
 
 h1,
@@ -297,9 +298,36 @@ img {
     margin: 8px 16px 32px 16px;
 }
 
+.icons-list {
+    display: flex;
+    justify-content: space-between;
+    gap: 24px;
+    list-style-type: none;
+
+}
+
+.icons-punkt {
+    width: 40px;
+    height: 40px;
+}
+
+.icons-item {
+    width: 100%;
+    height: 100%;
+    background-color: var(#4d5ae5);
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.icons-item:hover,
+.icons-item:focus {
+    background-color: #404bbf;
+}
+
 .social {
-    fill: #4d5ae5;
-   
+    background-color: var(#f4f4fd);
 }
 
 
@@ -310,6 +338,9 @@ img {
     width: calc((100% - 72px) / 4);
     border-radius: 0px 0px 4px 4px;
     transition: cubic-bezier(0.4, 0, 0.2, 1);
+    box-shadow:  1px 6px rgba(46, 47, 66, 0.08),
+        0px 1px 1px rgba(46, 47, 66, 0.16),
+        0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
 .team-photo-list:hover {
@@ -362,13 +393,35 @@ img {
    
 .portfolio-item {
     width: calc((100% - 48px) / 3);
-    transition: cubic-bezier(0.4, 0, 0.2, 1);
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .portfolio-item:hover {
-    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+        0px 1px 1px rgba(46, 47, 66, 0.16),
+        0px 2px 1px rgba(46, 47, 66, 0.08);
+    transform: translateY(0%);
 }
 
+.portfolio-img {
+    position: relative;
+    overflow: hidden;
+}
+
+.par {
+    position: absolute;
+    top: 0;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: var(#f4f4fd);
+    padding: 40px 32px;
+    background-color: #4d5ae5;
+    width: 100%;
+    height: 100%;
+    transform: translateY(100%);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
 
 .portfolio-container {
     padding: 32px 16px;
@@ -391,13 +444,23 @@ img {
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #434455;
+    
 }
+
+
 
 
 /* Footer Info */
 .footer {
     background: #2E2F42;
     padding: 100px 0;
+    display: flex;
+    align-items: baseline;
+}
+
+.footer-info {
+    margin-right: 120px;
+
 }
 
 .logo-web-f {
@@ -428,9 +491,45 @@ img {
     margin: 0;
 }
 
+.social-par {
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: var(#FFFFFF);
+    margin-bottom: 16px;   
+}
 
 
+.footer-icons-list {
+    display: flex;
+    gap: 16px;
+}
 
+.footer-icons-punkt {
+    width: 40px;
+    height: 40px;
+}
+
+.footer-icons-item {
+    width: 100%;
+    height: 100%;
+    background-color: var(#4d5ae5);
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.footer-icons-item:hover,
+.footer-icons-item:focus {
+    background-color: #404bbf;
+}
+
+.footer-social {
+    background-color: var(#f4f4fd);
+
+}
 
 
   
