--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,12 @@
+:root {
+   --blue: #4d5ae5;
+   --white: #f4f4fd;
+}
+
+
+
+
+
 body {
     font-family: "Roboto", sans-serif;
     font-weight: 400;
@@ -33,11 +42,14 @@ img {
     border-bottom: 1px solid #e7e9fc;
     background-color: #fff;
     padding: 24px 0;
+    box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
+        0px 1px 1px rgba(46, 47, 66, 0.16),
+        0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 
 .header-container {
     display: flex;
-    box-shadow: 0 1px 6px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 2px 1px 0 rgba(46, 47, 66, 0.08);
+    
 }
 
 .container {
@@ -58,6 +70,11 @@ img {
     display: flex;
     gap: 40px;
     list-style-type: none;
+}
+
+.menu-item {
+    color: #404bbf;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .logo-web {
@@ -97,7 +114,7 @@ img {
 }
 
 .menu-link::after {
-    width: 0;
+    width: 100%;
     height: 4px;
     background-color: #404bbf;
     content: "";
@@ -107,9 +124,7 @@ img {
     bottom: -1px;
 }
 
-.menu-link:hover::after {
-    width: 100%;
-}
+
 
 .adress {
     font-style: normal;
@@ -288,22 +303,25 @@ img {
 
 .name-container {
     padding: 32px 0;
+    width: 232px;
+        height: 40px;
+        gap: 24px;
+        text-align: center;
+        margin: 8px 16px 32px 16px;
 }
 
-.icons {
+/* .icons {
     width: 232px;
     height: 40px;
     gap: 24px;
     text-align: center;
     margin: 8px 16px 32px 16px;
-}
+} */
 
 .icons-list {
     display: flex;
     justify-content: space-between;
     gap: 24px;
-    list-style-type: none;
-
 }
 
 .icons-punkt {
@@ -400,7 +418,6 @@ img {
     box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
         0px 1px 1px rgba(46, 47, 66, 0.16),
         0px 2px 1px rgba(46, 47, 66, 0.08);
-    transform: translateY(0%);
 }
 
 .portfolio-img {
@@ -414,7 +431,7 @@ img {
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
-    color: var(#f4f4fd);
+    color: var(--white);
     padding: 40px 32px;
     background-color: #4d5ae5;
     width: 100%;
@@ -454,13 +471,16 @@ img {
 .footer {
     background: #2E2F42;
     padding: 100px 0;
+}
+
+.dop-container {
     display: flex;
     align-items: baseline;
 }
 
 .footer-info {
     margin-right: 120px;
-
+    
 }
 
 .logo-web-f {
@@ -496,7 +516,7 @@ img {
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
-    color: var(#FFFFFF);
+    color: var(--#FFFFFF);
     margin-bottom: 16px;   
 }
 
@@ -514,21 +534,22 @@ img {
 .footer-icons-item {
     width: 100%;
     height: 100%;
-    background-color: var(#4d5ae5);
+    background-color: var(--blue);
     border-radius: 50%;
     display: flex;
     align-items: center;
     justify-content: center;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer-icons-item:hover,
 .footer-icons-item:focus {
-    background-color: #404bbf;
+    background-color: #31d0aa;
 }
 
 .footer-social {
-    background-color: var(#f4f4fd);
-
+    fill: #f4f4fd;
+    background-color: var(--white);
 }
 
 
