--- a/css/styles.css
+++ b/css/styles.css
@@ -303,20 +303,16 @@ img {
 
 .name-container {
     padding: 32px 0;
-    width: 232px;
-        height: 40px;
-        gap: 24px;
-        text-align: center;
-        margin: 8px 16px 32px 16px;
+    
 }
 
-/* .icons {
+.icons {
     width: 232px;
     height: 40px;
     gap: 24px;
     text-align: center;
     margin: 8px 16px 32px 16px;
-} */
+}
 
 .icons-list {
     display: flex;
