--- a/css/styles.css
+++ b/css/styles.css
@@ -438,8 +438,12 @@ img {
     background-color: #4d5ae5;
     width: 100%;
     height: 100%;
-    transform: translateY(100%);
+    transform: translateY(0%);
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.par:hover {
+    transform: translateY(100%);
 }
 
 .portfolio-container {
