--- a/css/styles.css
+++ b/css/styles.css
@@ -413,7 +413,7 @@ img {
    
 .portfolio-item {
     width: calc((100% - 48px) / 3);
-    transition: transform box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .portfolio-item:hover {
@@ -443,8 +443,12 @@ img {
     background-color: #4d5ae5;
     width: 100%;
     height: 100%;
-    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
     transform: translateY(100%);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.portfolio-img:hover .par {
+    transform: translateY(0);
 }
 
 
