--- a/css/styles.css
+++ b/css/styles.css
@@ -78,6 +78,21 @@ img {
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.current {
+    
+}
+
+.current::after {
+    width: 100%;
+    height: 4px;
+    background-color: #404bbf;
+    content: "";
+    display: block;
+    position: absolute;
+    border-radius: 2px;
+    bottom: -1px;
+}
+
 .logo-web {
    font-family: "Raleway", sans-serif;
    font-size: 18px;
@@ -103,7 +118,6 @@ img {
     color: #2E2F42;
     line-height: 1.5;
     letter-spacing: 0.02em;
-    padding: 24px 0;
     position: relative;
     display: inline-block;
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -114,18 +128,6 @@ img {
 .menu-link:focus {
     color: #404BBF;
 }
-
-.menu-link::after {
-    width: 100%;
-    height: 4px;
-    background-color: #404bbf;
-    content: "";
-    display: block;
-    position: absolute;
-    border-radius: 2px;
-    bottom: -1px;
-}
-
 
 
 .adress {
@@ -144,7 +146,6 @@ img {
     color: #434455;
     line-height: 1.5;
     letter-spacing: 0.02em;
-    padding: 24px 0;
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -174,6 +175,7 @@ img {
     background-repeat: no-repeat;
     max-width: 1440px;
     background-position: center;
+    margin: 0 auto;
 }
 
 .title {
@@ -489,6 +491,7 @@ img {
 .dop-container {
     display: flex;
     align-items: baseline;
+    justify-content: flex-start;
 }
 
 .footer-info {
