--- a/css/styles.css
+++ b/css/styles.css
@@ -74,12 +74,12 @@ img {
 }
 
 .menu-item {
-    color: #404bbf;
+    color: #2e2f42;
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .current {
-    
+
 }
 
 .current::after {
@@ -89,6 +89,7 @@ img {
     content: "";
     display: block;
     position: absolute;
+    top: 2.8rem;
     border-radius: 2px;
     bottom: -1px;
 
@@ -122,7 +123,6 @@ img {
     position: relative;
     display: inline-block;
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    color: #404bbf;
 }
 
 .menu-link:hover,
