--- a/css/styles.css
+++ b/css/styles.css
@@ -72,9 +72,6 @@ img {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.current {
-}
-
 .current::after {
   width: 100%;
   height: 4px;
@@ -109,7 +106,7 @@ img {
 .menu-link {
   font-size: 16px;
   font-weight: 500;
-  color: #2e2f42;
+  color: #404bbf;
   line-height: 1.5;
   letter-spacing: 0.02em;
   position: relative;
