--- a/css/styles.css
+++ b/css/styles.css
@@ -72,6 +72,14 @@ img {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.current {
+  color: #2e2f42;
+}
+
+.current:hover {
+  color: #404bbf;
+}
+
 .current::after {
   width: 100%;
   height: 4px;
@@ -297,11 +305,7 @@ img {
   display: flex;
   justify-content: center;
   gap: 24px;
-  width: 232px;
-  height: 40px;
-  gap: 24px;
-  text-align: center;
-  margin: 8px 16px 32px 16px;
+  margin: 8px 16px 0 16px;
 }
 
 .icons-punkt {
@@ -389,17 +393,14 @@ img {
 .portfolio-item {
   width: calc((100% - 48px) / 3);
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  position: relative;
+  overflow: hidden;
 }
 
-.portfolio-item:hover {
+.portfolio-item:hover .par {
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
     0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
   transform: translateY(0%);
-}
-
-.portfolio-img {
-  position: relative;
-  overflow: hidden;
 }
 
 .par {
@@ -415,10 +416,6 @@ img {
   height: 100%;
   transform: translateY(100%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.portfolio-img:hover .par {
-  transform: translateY(0);
 }
 
 .portfolio-container {
