--- a/css/styles.css
+++ b/css/styles.css
@@ -46,6 +46,7 @@ img {
 
 .header-container {
   display: flex;
+  align-items: center;
 }
 
 .container {
@@ -59,37 +60,6 @@ img {
 .nav {
   display: flex;
   align-items: center;
-}
-
-.menu {
-  display: flex;
-  gap: 40px;
-  list-style-type: none;
-}
-
-.menu-item {
-  color: #2e2f42;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.current {
-  color: #2e2f42;
-}
-
-.current:hover {
-  color: #404bbf;
-}
-
-.current::after {
-  width: 100%;
-  height: 4px;
-  background-color: #404bbf;
-  content: "";
-  display: block;
-  position: absolute;
-  top: 2.8rem;
-  border-radius: 2px;
-  bottom: -1px;
 }
 
 .logo-web {
@@ -111,15 +81,40 @@ img {
   text-transform: uppercase;
 }
 
+.menu {
+  display: flex;
+  align-items: center;
+  gap: 40px;
+}
+
 .menu-link {
-  font-size: 16px;
+  display: block;
+  padding: 24px 0;
   font-weight: 500;
-  color: #404bbf;
+  font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
-  position: relative;
-  display: inline-block;
+  color: #2e2f42;
+
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.menu-link.current {
+  position: relative;
+}
+
+.menu-link.current::after {
+  content: "";
+
+  position: absolute;
+  left: 0;
+  bottom: -1px;
+
+  width: 100%;
+  height: 4px;
+  border-radius: 2px;
+
+  background-color: #404bbf;
 }
 
 .menu-link:hover,
@@ -129,12 +124,13 @@ img {
 
 .adress {
   font-style: normal;
+  margin-left: auto;
 }
 
 .contacts-list {
   display: flex;
   gap: 40px;
-  list-style-type: none;
+  align-items: center;
 }
 
 .contacts-info {
