--- a/css/styles.css
+++ b/css/styles.css
@@ -36,6 +36,11 @@ img {
   display: block;
 }
 
+input,
+textarea {
+  font-family: inherit;
+}
+
 .header {
   border-bottom: 1px solid #e7e9fc;
 
@@ -448,6 +453,7 @@ img {
 .footer {
   background: #2e2f42;
   padding: 100px 0;
+  position: relative;
 }
 
 .dop-container {
@@ -525,4 +531,287 @@ img {
 
 .footer-social {
   fill: #f4f4fd;
+}
+
+.footer-form-container {
+  width: 472px;
+  height: 80px;
+  position: absolute;
+  top: 100px;
+  right: 140px;
+  padding: 0px;
+  border: none;
+}
+
+.footer-form {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  padding-top: 40px;
+}
+
+.footer-form-par {
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 150%;
+  letter-spacing: 0.02em;
+  color: #fff;
+}
+
+.footer-input {
+  margin-right: 24px;
+  border: 1px solid #fff;
+  border-radius: 4px;
+  width: 264px;
+  height: 40px;
+  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 200%;
+  letter-spacing: 0.04em;
+  color: #fff;
+  padding: 8px 212px 8px 16px;
+}
+
+.footer-form-but {
+  position: absolute;
+  bottom: 0px;
+  right: 0px;
+  border-radius: 4px;
+  padding: 0px;
+  width: 185px;
+  height: 40px;
+  border: none;
+
+  background: #4d5ae5;
+
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 150%;
+  letter-spacing: 0.04em;
+  color: #fff;
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.but-fly-icon {
+  fill: #fff;
+  margin-left: 16px;
+}
+
+/* Modal window */
+
+.modal-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 999;
+  background-color: rgba(46, 47, 66, 0.4);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  /* opacity: 0;
+  pointer-events: none;
+  transition: opacity 250ms ease-in-out; */
+}
+
+/* .modal-overlay.is-open {
+  opacity: 1;
+  pointer-events: auto;
+} */
+
+.modal {
+  box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12),
+    0 2px 1px 0 rgba(0, 0, 0, 0.2);
+  background-color: #fcfcfc;
+  border-radius: 4px;
+  max-width: 408px;
+  height: 80%;
+  position: relative;
+}
+
+.modal-button {
+  position: absolute;
+  top: 24px;
+  right: 24px;
+  cursor: pointer;
+  border-radius: 100%;
+  background-color: #e7e9fc;
+
+  box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12),
+    0 2px 1px 0 rgba(0, 0, 0, 0.2);
+  background: #fcfcfc;
+  border: none;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-button:hover {
+  background-color: #404bbf;
+}
+
+.modal-button:hover .modal-button-close {
+  fill: #fff;
+}
+
+.modal-button-close {
+  fill: #2e2f42;
+  margin-bottom: 2px;
+}
+
+.modal-par {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 150%;
+  letter-spacing: 0.02em;
+  text-align: center;
+  color: #2e2f42;
+  padding: 72px 24px 16px 24px;
+}
+
+.form {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  gap: 8px;
+  padding: 0px;
+  border: none;
+  max-width: 360px;
+  margin: 0 auto;
+}
+
+.form-container {
+  display: flex;
+  max-width: 360px;
+  height: 58px;
+}
+
+.form-container-input {
+  display: flex;
+  position: relative;
+  padding: 0px;
+}
+
+.form-label {
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 117%;
+  letter-spacing: 0.04em;
+  color: #8e8f99;
+  display: flex;
+  flex-direction: column;
+}
+
+.form-input {
+  border-color: 1px solid rgba(46, 47, 66, 0.4);
+  border-radius: 4px;
+  width: 360px;
+  height: 40px;
+  margin-top: 4px;
+
+  transition: all;
+}
+
+.form-input: {
+  border-color: #4d5ae5;
+}
+
+.form-input:active .form-icon {
+  fill: #4d5ae5;
+}
+
+.form-input-com {
+  font-family: "Roboto", sans-serif;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 117%;
+  letter-spacing: 0.04em;
+  color: rgba(46, 47, 66, 0.4);
+}
+
+.form-check {
+  /* padding: 14px; */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 14px;
+}
+
+.check {
+  width: 16px;
+  height: 16px;
+}
+
+/* .icon-check {
+  border-radius: 2px;
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  margin-right: 8px;
+  cursor: pointer;
+} */
+
+.form-check-text {
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 117%;
+  letter-spacing: 0.04em;
+  color: #8e8f99;
+  margin-right: 4px;
+  margin-left: 4px;
+}
+
+.priv-link {
+  line-height: 133%;
+  text-decoration: underline;
+  text-decoration-skip-ink: none;
+  color: #4d5ae5;
+}
+
+/* .form-label-check {
+  line-height: 133%;
+  text-decoration: underline;
+  text-decoration-skip-ink: none;
+  color: #4d5ae5;
+  font-family: "Roboto", sans-serif;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 117%;
+  letter-spacing: 0.04em;
+  color: #8e8f99;
+} */
+
+.form-icon {
+  position: absolute;
+  top: 16px;
+  left: 16px;
+}
+
+.but-send {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 24px;
+}
+
+.form-button {
+  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+  background-color: #4d5ae5;
+  border-radius: 4px;
+  padding: 16px 32px;
+  width: 169px;
+  height: 56px;
+
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 150%;
+  letter-spacing: 0.04em;
+  text-align: center;
+  color: #fff;
+  cursor: pointer;
 }
