--- a/css/styles.css
+++ b/css/styles.css
@@ -3,6 +3,8 @@
   --white: #f4f4fd;
   --grey: #ffffff;
   --cloud: #f4f4fd;
+  --black: #8e8f99;
+  --sky: #404bbf;
 }
 
 body {
@@ -752,30 +754,49 @@ textarea {
 }
 
 .form-input-com {
+  width: 100%;
+  height: 120px;
   font-family: "Roboto", sans-serif;
   font-weight: 400;
   font-size: 12px;
   line-height: 117%;
   letter-spacing: 0.04em;
   color: rgba(46, 47, 66, 0.4);
+  border-radius: 4px;
+  background-color: transparent;
+  padding: 8px 16px;
+  outline: transparent;
+  resize: none;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.form-input-com:focus {
+  border-color: #4d5ae5;
 }
 
 .form-check {
   margin-bottom: 24px;
 }
 
-.check {
-  visually-hidden
-  width: 16px;
-  height: 16px;
+.input-checkbox:checked .symbol-check {
+  background-color: var(--sky);
+  border: none;
+  fill: var(--white);
 }
 
-/* .icon-check {
-  border-radius: 2px;
+.symbol-check {
+  width: 16px;
+  height: 16px;
   border: 1px solid rgba(46, 47, 66, 0.4);
-  margin-right: 8px;
-  cursor: pointer;
-} */
+  border-radius: 2px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  fill: transparent;
+}
 
 .form-check-text {
   font-weight: 400;
@@ -785,27 +806,15 @@ textarea {
   color: #8e8f99;
   margin-right: 4px;
   margin-left: 4px;
+  color: var(--black);
 }
 
 .priv-link {
   line-height: 133%;
   text-decoration: underline;
   text-decoration-skip-ink: none;
-  color: #4d5ae5;
+  color: var(--blue);
 }
-
-/* .form-label-check {
-  line-height: 133%;
-  text-decoration: underline;
-  text-decoration-skip-ink: none;
-  color: #4d5ae5;
-  font-family: "Roboto", sans-serif;
-  font-weight: 400;
-  font-size: 12px;
-  line-height: 117%;
-  letter-spacing: 0.04em;
-  color: #8e8f99;
-} */
 
 .form-icon {
   position: absolute;
@@ -813,13 +822,6 @@ textarea {
   left: 16px;
   transform: translateY(-50%);
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.but-send {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin-top: 24px;
 }
 
 .form-button {
