--- a/css/styles.css
+++ b/css/styles.css
@@ -536,11 +536,9 @@ textarea {
 }
 
 .footer-form-container {
+  margin-left: 80px;
   width: 472px;
   height: 80px;
-  position: absolute;
-  top: 100px;
-  right: 140px;
   padding: 0px;
   border: none;
 }
@@ -551,14 +549,10 @@ textarea {
   position: relative;
   width: 100%;
   height: 100%;
-  padding-top: 40px;
 }
 
 .footer-form-par {
   margin-bottom: 16px;
-  position: absolute;
-  top: 0px;
-  left: 0px;
   font-weight: 500;
   font-size: 16px;
   line-height: 150%;
@@ -682,7 +676,7 @@ textarea {
 
 .modal-button-close {
   fill: #2e2f42;
-  margin-bottom: 2px;
+
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -809,7 +803,7 @@ textarea {
 }
 
 .privacy-check {
-  fill: #404bbf;
+  fill: #f4f4f4fd;
 }
 
 .form-check-text {
@@ -839,6 +833,8 @@ textarea {
   min-width: 169px;
   height: 56px;
   border: none;
+  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+  background: #4d5ae5;
 
   font-weight: 500;
   font-size: 16px;
